rounds.index games.index games.show styled further. round battle function tested and rendering bugs fixed when interacting with round ui. games.show links to latest round only.

--- a/web_app/blueprints/rounds/templates/rounds/index.html
+++ b/web_app/blueprints/rounds/templates/rounds/index.html
@@ -6,6 +6,7 @@ Battle History
 {% endblock %}
 
 {% block content %}
+<main>
 
     {% for round in rounds %}
     <div class="card rounded-lg m-2">
@@ -36,5 +37,5 @@ Battle History
     </div>
     
     {% endfor %}
-
+</main>
 {% endblock %}
