--- a/web_app/templates/home.html
+++ b/web_app/templates/home.html
@@ -8,15 +8,13 @@
 {% block title %}Home Page{% endblock %}
 
 {% block content %}
-<main height="100%">
+<main >
 	<img id='home-icon' src='/static/images/duck-images/duck-placeholder.png'>
 
 </main>
 
 <style>
-	main {
-		height: 93vh;
-	}
+
 
 	#home-icon {
 		display: block;
