--- a/web_app/blueprints/games/templates/games/index.html
+++ b/web_app/blueprints/games/templates/games/index.html
@@ -6,6 +6,9 @@ Active Games
 {% endblock %}
 
 {% block content %}
+<main>
+
+
 
     {% for game in games %}
     <div class="card rounded-lg m-2">
@@ -29,12 +32,12 @@ Active Games
             <form action={{ url_for('games.show', username=username, game_id=game.id)}} method="GET">
                 <input type='submit' class='btn btn-info' value="View Game">
             </form>
-            <form action={{ url_for('rounds.index', game_id=game.id)}} method="GET">
+            <form action={{ url_for('rounds.index', game_id=game.id)}} style="margin-right: 8px;" method="GET">
                 <input type='submit' class='btn btn-info' value="Battle History">
             </form>
         </div>
     </div>
     
     {% endfor %}
-
+</main>
 {% endblock %}
