--- a/web_app/blueprints/games/templates/games/show.html
+++ b/web_app/blueprints/games/templates/games/show.html
@@ -6,6 +6,7 @@ Your proDUCKtive war
 {% endblock %}
 
 {% block content %}
+<main>
 
 <div class="container justify-content-center">
 
@@ -202,5 +203,5 @@ Your proDUCKtive war
     }
 </style>
 
-
+</main>
 {% endblock %}
