--- a/web_app/blueprints/rounds/templates/rounds/show.html
+++ b/web_app/blueprints/rounds/templates/rounds/show.html
@@ -30,6 +30,7 @@
                     <input value='' type='hidden' name='roll_value'>
                     <input value='' type='hidden' name='roll_index'>
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                    <input type='hidden' name='round_num' value="{{ round_num}}" />
                     <button type='submit' class='btn btn-info dice-placeholder text-dark'>
                         ROLL<br>DICE
                     </button>
@@ -108,6 +109,7 @@
                     <input type='hidden' id='hitpoints-input' name='hitpoints-input'>
                     <input type='hidden' id='luck-input' name='luck-input'>
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                    <input type='hidden' name='round_num' value="{{ round_num}}" />
                     <button id='submit-stats-btn' class="btn btn-info text-dark game-btn">
                         SUBMIT POWER UPS
                     </button>
@@ -120,6 +122,7 @@
                 <div class="form-group">
                     <input type='hidden' id='initiative_input' name='initiative_input'>
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                    <input type='hidden' name='round_num' value="{{ round_num}}" />
                     <button id='battle-btn' class="btn btn-warning text-dark game-btn">
                         ROLL INITIATIVE AND BATTLE
                     </button>
