--- a/web_app/static/css/custom.css
+++ b/web_app/static/css/custom.css
@@ -1,3 +1,8 @@
 body {
     background: linear-gradient(rgba(87, 114, 132, 1), rgba(1, 3, 56, .4));
 }
+
+main {
+    height: 93vh;
+    overflow-y: scroll;
+}
