--- a/web_app/blueprints/games/templates/games/new.html
+++ b/web_app/blueprints/games/templates/games/new.html
@@ -2,80 +2,85 @@
 
 {% block content %}
 
-<div class="row no-gutters" style="height: 100vh" >
-    <div style="background-color: blue" class="col-12 col-md-6">
-        <h1>{{current_user.username}}</h1>
-        <img class="w-100" src="/static/img/No-profile.jpg" alt="User Profile Img">
+<div class="container">
+
+    <div class="row" style="height: 100vh">
+        <div style="color: white" class="col-12 col-md-6">
+            <h1> Pick up to three habits and challenge a friend to a ProDUCKtivity War!</h1>
+        </div>
+
+        <div class="col-12 col-md-6 row justify-content-center">
+            <form action="{{ url_for('games.create') }}" method="POST">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+
+                <div class="input-group">
+                    <input type="text" name="p2_name" placeholder="Opponent username"
+                        class="form-control col-md-8 ">
+                </div>
+                <br>
+
+                <div class="input-group">
+                    <input type="text" name="habit_1_name" placeholder="Habit 1" class="form-control col-md-8 ">
+
+                    <div class="form-group col-md-5">
+                        <select id="inputState" name="habit_1_value" class="form-control">
+                            <option value="0" selected disabled>Choose...</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                        </select>
+                    </div>
+
+                </div>
+
+                <div class="input-group">
+                    <input type="text" name="habit_2_name" placeholder="Habit 2" class="form-control col-md-8 ">
+
+                    <div class="form-group col-md-5">
+                        <select id="inputState" name="habit_2_value" class="form-control">
+                            <option value='0' selected disabled>Choose...</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                        </select>
+                    </div>
+
+                </div>
+
+                <div class="input-group">
+                    <input type="text" name="habit_3_name" placeholder="Habit 3" class="form-control col-md-8 ">
+
+                    <div class="form-group col-md-5">
+                        <select id="inputState" name="habit_3_value" class="form-control">
+                            <option value='0' selected disabled>Choose...</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                        </select>
+                    </div>
+
+                </div>
+
+                <button type="submit" class="btn btn-info">Submit</button>
+
+            </form>
+
+        </div>
+
     </div>
-
-    <div style="background-color: black; " class="col-12 col-md-6 row justify-content-center">
-        <form action="{{ url_for('games.create') }}" method="POST">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-
-            <div class="input-group" >
-                <input type="text" name="p2_name" placeholder="Your buddy's username" class="form-control col-md-8 ">
-            </div>
-
-            <div class="input-group">
-                <input type="text" name="habit_1_name" placeholder="Habit 1" class="form-control col-md-8 ">
-                
-                <div class="form-group col-md-5" >
-                    <select id="inputState" name="habit_1_value" class="form-control" >
-                        <option value="0" selected disabled>Choose...</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                    </select>
-                </div>
-
-            </div>
-
-            <div class="input-group">
-                <input type="text" name="habit_2_name" placeholder="Habit 2" class="form-control col-md-8 ">
-            
-                <div class="form-group col-md-5" >
-                    <select id="inputState" name="habit_2_value" class="form-control" >
-                        <option value='0' selected disabled>Choose...</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                    </select>
-                </div>
-
-            </div>
-
-            <div class="input-group">
-                <input type="text" name="habit_3_name" placeholder="Habit 3" class="form-control col-md-8 ">
-            
-                <div class="form-group col-md-5" >
-                    <select id="inputState" name="habit_3_value" class="form-control" >
-                        <option value='0' selected disabled >Choose...</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                        <option value="6">6</option>
-                        <option value="7">7</option>
-                    </select>
-                </div>
-
-            </div>
-
-            <button type="submit" class="btn btn-primary" >Submit</button>
-    
-        </form>
-
-    </div>
-
 </div>
+
 
 {% endblock %}
