--- a/web_app/blueprints/users/templates/users/new.html
+++ b/web_app/blueprints/users/templates/users/new.html
@@ -25,7 +25,7 @@
                 <input type="password" class="form-control" name="password" id="password" placeholder="password">
             </div>
 
-            <button type='submit' class="btn btn-primary">Register</button>
+            <button type='submit' class="btn btn-info">Register</button>
 
         </form>
 
