--- a/web_app/blueprints/users/templates/users/show.html
+++ b/web_app/blueprints/users/templates/users/show.html
@@ -2,27 +2,20 @@
 
 {% block content %}
 
-<div class="row no-gutters" style="height: 100vh" >
-    <div style="background-color: blue" class="col-12 col-md-6">
-        <h1>{{current_user.username}}</h1>
-        <img class="w-100" src="/static/img/No-profile.jpg" alt="User Profile Picture">
-    </div>
-
-    <div style="background-color: black; text-align: center;" class="col-12 col-md-6 justify-content-center">
-        <div class="list-group">
-            <ul class="list-group">
-                <li class="list-group-item active">List of Active Games</li>
-                <li class="list-group-item">Game 1</li>
-                <li class="list-group-item">Game 2</li>
-                <li class="list-group-item">Game 3</li>
-                <li class="list-group-item">Game 4</li>
-              </ul>
+<main>
+    <div class="container">
+        <div class="row" >
+            <div class="col" style="color: white;">
+                <h1>{{current_user.username}}</h1>
+                <h1>{{current_user.email}}</h1>
+                <a href="{{ url_for('games.new') }}" class="btn btn-info" >New Game</a>
+            </div>
+        
         </div>
-
-        <a href="{{ url_for('games.new') }}" class="btn btn-primary" >New Game</a>
-
+    
     </div>
 
-</div>
+</main>
+
 
 {% endblock %}
