--- a/web_app/blueprints/users/templates/users/new.html
+++ b/web_app/blueprints/users/templates/users/new.html
@@ -4,10 +4,10 @@
 
 
     <div class="container">
-        <div class="jumbotron">
-            <h1>Register </h1>
+        
+            <h1 style="color: white;">Register </h1>
 
-        </div>
+        
         <form action={{url_for("users.create")}} method="POST">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <div class="form-group">
