--- a/web_app/blueprints/users/templates/users/show.html
+++ b/web_app/blueprints/users/templates/users/show.html
@@ -9,6 +9,7 @@
                 <h1>{{current_user.username}}</h1>
                 <h1>{{current_user.email}}</h1>
                 <a href="{{ url_for('games.new') }}" class="btn btn-info" >New Game</a>
+                <a href="{{ url_for('games.index', username=current_user.username) }}" class="btn btn-info" >View Games</a>
             </div>
         
         </div>
