--- a/web_app/blueprints/log_habits/templates/log_habits/approval.html
+++ b/web_app/blueprints/log_habits/templates/log_habits/approval.html
@@ -6,8 +6,9 @@ Approval page
 
 {% block content %}
 
-<div class="card rounded-lg m-2">
+<main>
     {% for i in range(0, to_approve_length) %}
+    <div class="card rounded-lg m-2"></div>
     <div class="card-body">
         {# 
         <h3 class="card-title">{{game.player_1.username}} vs. {{game.player_2.username}}</h3> 
@@ -19,21 +20,21 @@ Approval page
             <img width='30%' src="{{to_approve[i].image_path}}">
         </div>
         <div class="card-footer d-flex flex-row-reverse">
-            <form action="{{ url_for('log_habits.approve', username = username, game_id = game_id)}}" enctype="multipart/form-data" method="POST">
+            <form action="{{ url_for('log_habits.approve', username = username, game_id = game_id)}}"
+                enctype="multipart/form-data" method="POST">
                 <input type='hidden' name="loghabit-ids" value="{{ to_approve[i].id }}">
-                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                 <input type='submit' class='btn btn-info' value="Accept">
+                <input type='submit' formaction="{{ url_for('log_habits.reject', username = username, game_id = game_id) }}"
+                method="POST" class='btn btn-info' value="Reject">
             </form>
-            <a href="{{ url_for('games.show', username = username, game_id = game_id) }}"><button class='btn btn-info' >Reject</button></a>
+
         </div>
     </div>
+
+
     {% endfor %}
+</main>
 
-
-</div>
 
 {% endblock %}
-
-{#
-    action={{ url_for('games.show', username=username, game_id=game.id)}}
-#}
